--- a/templates/base.html
+++ b/templates/base.html
@@ -48,7 +48,7 @@
         <ul class="navbar-nav ms-auto">
           {% if session.get('user') %}
             <li class="nav-item"><a class="nav-link" href="{{ url_for('index') }}"><i class="bi bi-house"></i> Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="{{ url_for('accounts') }}"><i class="bi bi-chat-dots"></i> Accounts</a></li>
+            <li class="nav-item"><a class="nav-link" href="{{ url_for('accounts_list') }}"><i class="bi bi-chat-dots"></i> Accounts</a></li>
             {% if session.get('user') == 'admin' %}
               <li class="nav-item"><a class="nav-link" href="{{ url_for('admin') }}"><i class="bi bi-shield-lock"></i> Admin</a></li>
             {% endif %}
